<resources>
    <string name="app_name">PTDS</string>
    <string name="ptds_image">ptds image</string>
    <string name="ptds_test_2">Post-traumatic stress disorder\n diagnostic and consultation system</string>
    <string name="get_started">Get Started</string>
    <string name="about_us">About us</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="self_test">Self Diagnostic</string>
    <string name="contact_doctor">Consult Doctor</string>
    <string name="daily_tips">Daily tips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercise_n_routine">Exercise \n Routine</string>
    <string name="hello_welcome_to_ptds_diagnostic_system">Hello !! Welcome to PTDS Diagnostic system !!</string>
    <string name="section_a">Section A</string>

    <string name="section_a_instruction">This questionnaire asks about problems you may have had after a very stressful experience involving
actual or threatened death, serious injury, or sexual violence. It could be something that happened to you directly,
something you witnessed, or something you learned happened to a close family member or close friend. Some
examples are a serious accident; fire; disaster such as a hurricane, tornado, or earthquake; physical or sexual attack or abuse; war; homicide; or suicide.\nFirst, please answer a few questions about your worst event, which for this questionnaire means the event that
currently bothers you the most. This could be one of the examples above or some other very stressful experience. Also, it could be a single event (for example, a car crash) or multiple similar events (for example, multiple stressful events in a war-zone or repeated sexual abuse).
    </string>

    <string name="worst_event_edt_label"><b>Briefly identify the worst event (if you feel comfortable doing so):</b>
    </string>
    <string name="how_long_ago_did_it_happen">How long ago did it happen?</string>
    <string name="please_estimate_if_you_are_not_sure">please estimate if you are not sure</string>
    <string name="did_it_involve_actual_or_threatened_death_serious_injury_or_sexual_violence">Did it involve actual or threatened death, serious injury, or sexual violence?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="how_did_you_experience_it">How did you experience it?</string>
    <string name="it_happened_to_me_directly">It happened to me directly</string>
    <string name="i_witnessed_it">I witnessed it</string>
    <string name="i_learned_about_it_happening_to_a_close_family_member_or_close_friend">I learned about it happening to a close family member or close friend</string>
    <string name="i_was_repeatedly_exposed_to_details_about_it_as_part_of_my_job_for_example_paramedic_police_military_or_other_first_responder">I was repeatedly exposed to details about it as part of my job (for example, paramedic, police, military, or other first responder)</string>
    <string name="txt5">If the event involved the death of a close family member or close friend, was it due to some kind of accident or violence, or was it due to natural causes?</string>
    <string name="accident_or_violence">Accident or violence</string>
    <string name="natural_causes">Natural causes</string>
    <string name="not_applicable_the_event_did_not_involve_the_death_of_a_close_family_member_or_close_friend">Not applicable (the event did not involve the death of a close family member or close friend)</string>
    <string name="text_here">text here</string>
    <string name="next">Next</string>
    <string name="section_1_question">In the past month, how much were you bothered by:</string>
    <string name="not_at_all">Not at all</string>
    <string name="a_little_bit">A little bit</string>
    <string name="moderately">Moderately</string>
    <string name="quite_a_bit">Quite a bit</string>
    <string name="extremely">Extremely</string>
    <string name="section_b_title">Section B</string>
    <string name="proceed">Proceed</string>


    <string name="section2Instrictions">
       This section contains a list of problems that people sometimes have in response to a very stressful experience. Keeping
your worst event in mind, please read each problem carefully and then circle one of the numbers to the right to
indicate how much you have been bothered by that problem in the past month.
    </string>
    <string name="optional">Optional</string>
    <string name="warning">Warning</string>
    <string-array name="section_2">
        <item>
            Repeated, disturbing, and unwanted memories of the stressful experience?
        </item>
        <item>
             Repeated, disturbing dreams of the stressful experience?
        </item>
        <item>
            Suddenly feeling or acting as if the stressful experience were actually happening again (as if you were actually back there reliving it)?
        </item>
        <item>
            Feeling very upset when something reminded you of the stressful experience?
        </item>
        <item>
            Having strong physical reactions when something reminded you of the stressful experience (for example, heart pounding, trouble breathing, sweating)?
        </item>
        <item>
            Avoiding memories, thoughts, or feelings related to the stressful experience?
        </item>
        <item>
            Avoiding external reminders of the stressful experience (for example, people, places, conversations, activities, objects, or situations)?
        </item>
        <item>
           Trouble remembering important parts of the stressful experience?
        </item>
        <item>
            Having strong negative beliefs about yourself, other people, or the world (for example, having thoughts such as: I am bad, there is something seriously wrong with me, no one can be trusted, the world is completely dangerous)?
        </item>
        <item>
            Blaming yourself or someone else for the stressful experience or what happened after it?
        </item>
        <item>
            Having strong negative feelings such as fear, horror, anger, guilt, or shame?
        </item>
        <item>
             Loss of interest in activities that you used to enjoy?
        </item>
        <item>
            Feeling distant or cut off from other people?
        </item>
        <item>
             Trouble experiencing positive feelings (for example, being unable to feel happiness or have loving feelings for people close to you)?
        </item>
        <item>
           Irritable behavior, angry outbursts, or acting aggressively?
        </item>
        <item>
             Taking too many risks or doing things that could cause you harm?
        </item>
        <item>
             Being “super-alert” or watchful or on guard?
        </item>
        <item>
            Feeling jumpy or easily startled?
        </item>
        <item>
            Having difficulty concentrating?
        </item>
        <item>
            Trouble falling or staying asleep?
        </item>
    </string-array>


    <string-array name="tips">
        <item><b>Breathing:</b> sit straight in a chair, put one hand one your chest and the other on your abdomen, take a deep breath through your nose (the hand on your abdomen should rise while the one on your chest should move very little), then exhale as much as you can through your mouth (this time, the hand on your abdomen should move in, while the hand one your chest should only move a little), repeat this multiple times. (N.B if you have difficulty doing this while sitting, lie on your back)</item>
        <item><b>Progressive muscle relaxation:</b> this involves tensing and relaxing different groups of muscles in the body. You can start with your left foot by trying to tense the muscles in the foot, then count to 10 and relax the muscles. While relaxing, take slow deep breaths, then shift to another set of muscles, say the right foot. Try to focus on one group muscles at a time. </item>
        <item><b>Visualization:</b> this involves imagining yourself in a place or scene where you feel at peace, free, without tension or anxiety. Close your eyes and imagine restful place. Try to picture it as vividly as possible: everything you would hear, see, smell, taste and feel.</item>
        <item><b>Self massage:</b> Massage is known to reduce stress, relieves pain and ease muscle tension. And it is possible to reap this benefit at home by practicing self-massaging. Try to take a few minutes at home or between tasks, on the couch or in bed before sleep. Parts that can be massaged include the scalp, face, neck and shoulders.</item>
        <item><b>Rhythmic movement/mindful exercise</b>running, walking, swimming, dancing, rowing and climbing): while these exercises may seem stressful, they will get you into a flow of repetitive movement and produce relaxation response subsequently.</item>
        <item><b>Yoga:</b> this involves a combination of poses: both moving and stationary. This is combined with deep breathing. Yoga is instrumental in reducing stress and anxiety, also it has been shown to improve balance, stamina, strength and flexibility. It is important to learn yoga from professionals before practicing on your own as injuries can result from incorrect poses.</item>
        <item><b>Pursue outdoor activities</b> like football, basketball, volleyball, badminton and table tennis among others.</item>
        <item><b>Confide in a person you trust:</b> talk to someone you can connect with and trust. A person who will listen to you without judging, criticizing or getting distracted. It could be your spouse, family member or a friend.</item>
        <item><b>Spend time with positive people:</b> its important you spend most of your time with people that will encourage you and cheer you up.</item>
        <item><b>Avoid alcohol and drugs:</b> try to resist the temptation to self-medicate with drugs or alcohol. This will worsen your symptoms.</item>

    </string-array>

</resources>



