<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:background="@drawable/textview_bg"
            android:minHeight="90dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/section_1_question"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:background="@drawable/txt_headerbg"
                android:minHeight="100dp"
                android:id="@+id/txt_question"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:id="@+id/options"
                android:layout_marginTop="20dp"
                android:layout_below="@id/txt_question"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_at_all"
                    android:id="@+id/rb_zero"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:checked="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_little_bit"
                    android:layout_margin="10dp"
                    android:id="@+id/rb_one"
                    android:padding="10dp"
                    android:checked="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderately"
                    android:id="@+id/rb_two"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:checked="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quite_a_bit"
                    android:layout_margin="10dp"
                    android:id="@+id/rb_three"
                    android:padding="10dp"
                    android:checked="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extremely"
                    android:layout_margin="10dp"
                    android:id="@+id/rb_four"
                    android:padding="10dp"
                    android:checked="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />


            </RadioGroup>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>