<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.fragments.self_diagnostic">


    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColorHighlight="@color/big"
        android:textStyle="bold"
        android:text="@string/section_a"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:id="@+id/criterion_a_layout"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardCornerRadius="8dp"
                    android:elevation="5dp"
                    app:cardBackgroundColor="@color/big2"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="10dp"
                        android:text="@string/section_a_instruction"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textStyle="normal" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/worst_event_edt_label"
                    android:layout_height="wrap_content"/>


                <EditText
                    android:layout_width="match_parent"
                    android:inputType="textMultiLine"
                    android:minHeight="120dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:hint="text here"
                    android:layout_height="wrap_content"
                    android:autofillHints="Todo" />

                <TextView
                    android:layout_width="match_parent"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/how_long_ago_did_it_happen"
                    android:layout_height="wrap_content"/>


            </LinearLayout>



        </LinearLayout>

    </ScrollView>


</LinearLayout>