<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/big"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context=".activities.activities.MainActivity">



       <ImageView
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.5"
           android:contentDescription="@string/ptds_image"
           android:scaleType="fitXY"
           android:src="@drawable/ptdsimage" />


    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:layout_height="0dp">


        <LinearLayout
            android:id="@+id/med_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_medical_services_24" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_medical_services_24" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_medical_services_24" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/med_icon"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/ptds_image"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/ptds_test_2"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/get_started"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>




</LinearLayout>