<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.fragments.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="15dp"
            android:elevation="5dp"
            android:clickable="true"
            android:id="@+id/selfDiagonostic"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#E206283D"
            android:layout_height="150dp"
            android:focusable="true">


            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:lineSpacingExtra="2.5dp"
                android:textColor="@color/white"
                android:text="@string/self_test"
                android:layout_height="wrap_content"/>


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"

            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"

            android:weightSum="1"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_margin="10dp"
                app:cardElevation="5dp"
                android:id="@+id/dailyTips"
                app:cardCornerRadius="15dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardBackgroundColor="#E647B5FF"
                android:layout_marginBottom="10dp"
                android:layout_height="150dp"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:lineSpacingMultiplier="1.5"
                    android:text="Daily Tips"
                    android:textColor="#283593"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                app:cardElevation="5dp"
                app:cardCornerRadius="15dp"
                android:id="@+id/exercise_n_routine"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                app:cardBackgroundColor="#E647B5FF"
                android:layout_marginBottom="10dp"
                android:layout_height="150dp"
                android:focusable="true">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-black"
                    android:lineSpacingMultiplier="1.5"
                    android:text="@string/exercise_n_routine"
                    android:textColor="#283593"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </androidx.cardview.widget.CardView>






        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            app:cardCornerRadius="15dp"
            android:elevation="5dp"
            android:id="@+id/contact_Doctor"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#CC1363DF"
            android:layout_height="150dp"
            android:focusable="true">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:lineSpacingExtra="2.5dp"
                android:textColor="@color/white"
                android:text="@string/contact_doctor"
                android:layout_height="wrap_content"/>


        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:minHeight="48dp"
            android:padding="10dp"
            android:id="@+id/marque_txt"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/hello_welcome_to_ptds_diagnostic_system"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>

</ScrollView>

